added more porjects and home page details

--- a/images/works/WEB/coa-b/movingsite-2.html
+++ b/images/works/WEB/coa-b/movingsite-2.html
@@ -21,8 +21,9 @@
         </ul>
       </header>
 			<div class="header-text" id="top">
-				<h1 style="font-size: 2.3em;">How to change your address and Moving Tips.</h1>
-				<img class="mail-img mx-auto d-block" src="img/mail.png">
+				<h1>Dont Forget Your Mail!</h1>
+        <h2>Change Your Address Today</h2>
+				<a href="" class="top-cta">Change My Address</a>
 			</div>
 		</div>
 		<div class="row"">
